# walnut_pairing

./: .cursorrules  .flake8  .gitignore  ARCHITECTURE.md  CODE_QUALITY.md  CQRS_ARCHITECTURE.md  LICENSE  Makefile  README.md  README_RESTRUCTURE.md  mypy.ini  pyproject.toml  requirements.txt  test_image_finder.py
.cursor/rules/: architecture_guidelines.mdc  cursor_configuration.mdc  cursor_rules.mdc  dependency_constraints.mdc  project_structure.mdc  python_coding_standards.mdc  self_improving.mdc  webapi_controller_patterns.mdc
app__batch/: __init__.py  app_config.py  application.py  config.yml  di_container.py  main.py
app__image_capture/: __init__.py  app_config.py  application.py  config.yml  di_container.py  main.py
app__webapi/: __init__.py  app_config.py  dependencies.py  di_container.py  main.py  routes.py
app__webapi/controllers/: __init__.py  walnut_pairings__controller.py
app__webapi/routes/: __init__.py  walnuts.py
batch/: __init__.py  app_config.py  application.py  config.yml  di_container.py  di_registry.py  main.py
business_docs/: 核桃配对.xlsx  核桃配对训练模型BRD.docx
cursor_camera/: README.md  create_shortcut.vbs  main.py  requirements.txt
libs/: __init__.py
libs/application_layer/: __init__.py  (+1 more)
scripts/: check_code_quality.sh  check_dependencies.py  fix_code_quality.sh
sql_scripts/: initial.sql
walnut_pair/: PARAMETER_TUNING_GUIDE.md  README.md  WalnutsPairing.bat  create_folders.py  main.py  requirements.txt  tuning_examples.py
walnut_pair_backend/: Makefile  config.yml
webapi/: __init__.py  config.yml  dependencies.py  main.py
(+195 files in other folders)
